# emberguard

./: .gitattributes  CMakeLists.txt  INSTALLATION.md  README.md  TowerDefense_.sln
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yaml  build.yml
TowerDefense_/: TowerDefense_.vcxproj  TowerDefense_.vcxproj.filters
TowerDefense_/enemy/: Enemy.cpp
TowerDefense_/gamengine/: GameEngine.cpp  GameEngine.h
TowerDefense_/menues/: Button.cpp  Button.h  GameOverMenu.cpp  GameOverMenu.h  LevelCompleteMenu.cpp  LevelCompleteMenu.h  SmallMenu.cpp  SmallMenu.h
TowerDefense_/player/: Player.cpp  Player.h  PlayerMenu.cpp
TowerDefense_/tower/: FlameTurret.cpp  FlameTurret.h  LaserTower.cpp  Tower.cpp  TowerMenu.cpp  TowerSelectionMenu.cpp  TowerSelectionMenu.h
TowerDefense_/waves/: Map.cpp  PathsConfig.h  Wave.cpp
src/: Animation.cpp  Animation.h  GameManager.cpp  GameManager.h  Source.cpp  TimeSystem.cpp  TimeSystem.h
src/Rpg/dialogueSystem/: Dialogue.cpp  Dialogue.h  DialogueManager.cpp  DialogueManager.h  DialogueSegment.cpp  DialogueSegment.h
src/Rpg/entities/: DrawableEntity.h
src/Rpg/gamengine/: RPGEngine.cpp  RPGEngine.h
src/Rpg/inventory/: Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  InventoryMenu.cpp  InventoryMenu.h
src/Rpg/inventory/items/: DroppedItem.cpp  DroppedItem.h  Item.cpp  Item.h  TowerBlueprint.cpp  TowerBlueprint.h  TowerBlueprintEpic.cpp  TowerBlueprintEpic.h  TowerBlueprintMythic.cpp  TowerBlueprintMythic.h  TowerBlueprintRare.cpp  TowerBlueprintRare.h  Wood.cpp  Wood.h
src/Rpg/mainCharacter/: MainCharacter.cpp  MainCharacter.h
src/Rpg/map/: GameMap.cpp  GameMap.h
src/Rpg/map/buildings/: Barrier.cpp  Barrier.h  Bed.cpp  Bed.h  Entity.cpp  Entity.h  MCHouse.cpp  MCHouse.h  MCHouseInt.cpp  MCHouseInt.h
src/Rpg/map/zones/: Zone.cpp  Zone.h  ZoneManager.cpp  ZoneManager.h
src/Rpg/menues/: AnalyzeMenu.cpp  AnalyzeMenu.h  BankMenu.cpp  BankMenu.h  BorrowMenu.cpp  BorrowMenu.h  DepositMenu.cpp  DepositMenu.h  Menu.cpp  Menu.h  ShopMenu.cpp  ShopMenu.h  StartTowerDefenseMenu.cpp  StartTowerDefenseMenu.h  WithdrawMenu.cpp  WithdrawMenu.h
src/Rpg/npcs/: ElliotMarlowe.cpp  ElliotMarlowe.h  GarrickStone.cpp  GarrickStone.h  MiraStanton.cpp  MiraStanton.h  NPC.cpp  NPC.h  NPCManager.cpp  NPCManager.h  SeraphinaLumeris.cpp  SeraphinaLumeris.h  VincentHale.cpp  VincentHale.h
src/Rpg/saveSystem/: SaveSystem.cpp  SaveSystem.h
src/Rpg/skillTree/: SkillNode.cpp  SkillNode.h  SkillTree.cpp  SkillTree.h  SkillTreeMenu.cpp  SkillTreeMenu.h
src/TowerDefense/enemy/: EmpireScout.cpp  EmpireScout.h  Enemy.cpp  Enemy.h  RadiationBerserker.cpp  RadiationBerserker.h  WastelandMarauder.cpp  WastelandMarauder.h
src/TowerDefense/gamengine/: GameEngine.cpp  GameEngine.h
src/TowerDefense/menues/: Button.cpp  Button.h  GameOverMenu.cpp  GameOverMenu.h  LevelCompleteMenu.cpp  LevelCompleteMenu.h  SmallMenu.cpp  SmallMenu.h
src/TowerDefense/player/: Player.cpp  Player.h  PlayerMenu.cpp  PlayerMenu.h
src/TowerDefense/projectiles/: FlameProjectile.cpp  FlameProjectile.h  LaserProjectile.cpp  LaserProjectile.h  Projectile.cpp  Projectile.h
src/TowerDefense/tower/: FlameTurret.cpp  FlameTurret.h  LaserTower.cpp  LaserTower.h  ThunderRod.cpp  ThunderRod.h  Tower.cpp  Tower.h  TowerMenu.cpp  TowerMenu.h  TowerSelectionMenu.cpp  TowerSelectionMenu.h  Upgrade.cpp  Upgrade.h
src/TowerDefense/waves/: Map.cpp  Map.h  PathsConfig.h  Wave.cpp  Wave.h
src/enemy/: Enemy.cpp  RadiationBerserker.cpp  WastelandMarauder.h
src/gamengine/: GameEngine.cpp  GameEngine.h
src/menues/: Button.cpp  GameOverMenu.cpp  GameOverMenu.h  LevelCompleteMenu.cpp  LevelCompleteMenu.h
src/player/: Player.cpp  Player.h  PlayerMenu.cpp
src/projectiles/: FlameProjectile.cpp  LaserProjectile.cpp  Projectile.cpp  Projectile.h
src/tower/: FlameTurret.cpp  FlameTurret.h  LaserTower.cpp  LaserTower.h  Tower.cpp  Tower.h  TowerMenu.cpp  TowerSelectionMenu.cpp  TowerSelectionMenu.h
src/waves/: Map.cpp  Map.h  Wave.cpp  Wave.h
